# fashiondb

./: .gitignore  README.md  crud.py  db.py  main.py  model.py  pyproject.toml
data/: sample_ids.npy  sample_images.npy  sample_labels.npy
