[project]
name = "fashiondb"
version = "0.1.0"
description = "Library to keep track of the Fashion MNIST images"
author = "Valentina Lacivita"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "matplotlib>=3.7.5",
    "numpy>=1.24.4",
    "sqlalchemy>=2.0.37",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.33.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.9.2",
]
